--- a/src/components/RecuperarSenha.scss
+++ b/src/components/RecuperarSenha.scss
@@ -27,15 +27,22 @@ $light-bg: #edf8ef;
       margin-bottom: 2rem;
     }
 
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+
     .input-wrapper {
       position: relative;
       width: 100%;
       max-width: 300px;
-      margin-bottom: 1rem;
+      margin-bottom: 1.5rem;
 
       input {
         width: 100%;
-        padding: 0.75rem 2.5rem 0.75rem 0.75rem; // espaço à direita para o ícone
+        padding: 0.75rem 2.5rem 0.75rem 0.75rem;
         border: 1px solid #ccc;
         border-radius: 8px;
         background-color: $light-bg;
@@ -55,33 +62,15 @@ $light-bg: #edf8ef;
     }
 
     .forgot {
-      
-      a {color: $primary-color;
-      font-size: 0.9rem;
-      margin-bottom: 1.5rem;
-      cursor: pointer;
-      align-self: center;
-      max-width: 300px;
-      text-align: center;
-
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-    }
-
-    .signup {
-      font-size: 0.9rem;
-      color: #333;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    
       a {
         color: $primary-color;
-        font-weight: bold;
-        margin-left: 0.25rem;
-        text-decoration: none;
-    
+        font-size: 0.9rem;
+        margin-bottom: 1.5rem;
+        cursor: pointer;
+        align-self: center;
+        max-width: 300px;
+        text-align: center;
+
         &:hover {
           text-decoration: underline;
         }
@@ -100,7 +89,7 @@ $light-bg: #edf8ef;
       transition: background-color 0.3s ease;
 
       &:hover {
-        background-color: #154814;;
+        background-color: #154814;
       }
     }
   }
@@ -126,7 +115,6 @@ $light-bg: #edf8ef;
     background-size: calc(0.866 * var(--s)) var(--s);
   }
 
-  // RESPONSIVO
   @media (max-width: 768px) {
     flex-direction: column;
 
