feat: alteracoes para variavel global

--- a/src/components/Cadastro.scss
+++ b/src/components/Cadastro.scss
@@ -29,7 +29,7 @@ $light-bg: #edf8ef;
     }
 
     .input-wrapper {
-        position: relative; // ADICIONE ESTA LINHA
+        position: relative;
         width: 100%;
         max-width: 300px;
         margin-bottom: 1rem;
