--- a/src/components/CadastroAmbiente.scss
+++ b/src/components/CadastroAmbiente.scss
@@ -70,8 +70,9 @@ $light-bg: #edf8ef;
           display: flex;
           align-items: center;
 
-          input {
+          input[type="radio"] {
             margin-right: 0.5rem;
+            accent-color: $primary-color; 
           }
         }
       }
