--- a/frontend/src/components/Login.scss
+++ b/frontend/src/components/Login.scss
@@ -55,7 +55,8 @@ $light-bg: #edf8ef;
     }
 
     .forgot {
-      color: $primary-color;
+      
+      a {color: $primary-color;
       font-size: 0.9rem;
       margin-bottom: 1.5rem;
       cursor: pointer;
@@ -66,6 +67,7 @@ $light-bg: #edf8ef;
       &:hover {
         text-decoration: underline;
       }
+    }
     }
 
     .signup {
