--- a/frontend/src/components/RecuperarSenha.scss
+++ b/frontend/src/components/RecuperarSenha.scss
@@ -1,8 +1,7 @@
-
 $primary-color: #238724;
 $light-bg: #edf8ef;
 
-.cadastro-page {
+.login-page {
   display: flex;
   height: 100vh;
   font-family: 'Bai Jamjuree', sans-serif;
@@ -28,45 +27,49 @@ $light-bg: #edf8ef;
       margin-bottom: 2rem;
     }
 
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+    }
+
     .input-wrapper {
-        position: relative;
-        width: 100%;
-        max-width: 300px;
-        margin-bottom: 1rem;
-      
-        input {
-          width: 100%;
-          padding: 0.75rem 2.5rem 0.75rem 0.75rem; // espaço à direita para o ícone
-          border: 1px solid #ccc;
-          border-radius: 8px;
-          background-color: $light-bg;
-          font-size: 1rem;
-          color: #333;
-        }
-      
-        .icon {
-          position: absolute;
-          right: 12px;
-          top: 50%;
-          transform: translateY(-50%);
-          font-size: 20px;
-          cursor: pointer;
-          color: #555;
-        }
-      }
-      
-
-    .voltar-login {
-      font-size: 0.9rem;
-      color: #333;
+      position: relative;
+      width: 100%;
+      max-width: 300px;
       margin-bottom: 1.5rem;
-      text-align: center;
 
+      input {
+        width: 100%;
+        padding: 0.75rem 2.5rem 0.75rem 0.75rem;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        background-color: $light-bg;
+        font-size: 1rem;
+        color: #333;
+      }
+
+      .icon {
+        position: absolute;
+        right: 12px;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 20px;
+        cursor: pointer;
+        color: #555;
+      }
+    }
+
+    .forgot {
       a {
         color: $primary-color;
-        font-weight: bold;
-        margin-left: 0.25rem;
-        text-decoration: none;
+        font-size: 0.9rem;
+        margin-bottom: 1.5rem;
+        cursor: pointer;
+        align-self: center;
+        max-width: 300px;
+        text-align: center;
 
         &:hover {
           text-decoration: underline;
@@ -93,7 +96,8 @@ $light-bg: #edf8ef;
 
   .right-side {
     flex: 1;
-    // mesmo fundo do login
+
+    // fundo animado
     --s: 194px;
     --c1: #238724;
     --c2: #154814;
@@ -120,6 +124,7 @@ $light-bg: #edf8ef;
 
     .left-panel {
       width: 100%;
+      padding: center;
     }
   }
 }
