--- a/public/assets/css/cadastro-ambiente.css
+++ b/public/assets/css/cadastro-ambiente.css
@@ -1,5 +1,9 @@
+.logo-cabecalho-cadastro{
+  max-width: 150px;
+}
+
 .cadastro-ambiente {
-  max-width: 1000px;
+  width: 70%;
   margin: 0 auto;
   padding: 2rem;
   font-family: 'Bai Jamjuree', sans-serif;
@@ -119,20 +123,30 @@
   cursor: pointer;
   border: 2px dashed var(--cor-primaria);
   border-radius: 12px;
-  padding: 2rem;
   text-align: center;
   margin-bottom: 2rem;
   background-color: white;
   transition: background-color 0.3s ease;
+  min-height: 300px;
 }
 
 .cadastro-ambiente form .upload:hover {
   background-color: var(--cor-hover-upload);
 }
 
-.cadastro-ambiente form .upload img {
+.cadastro-ambiente form .upload .imagem-placeholder {
+  margin: 2rem;
   max-width: 150px;
   margin-bottom: 1rem;
+}
+
+.cadastro-ambiente form .upload .imagem-preview {
+  object-fit: cover;
+  width: 90%;
+  height: 90%;
+  margin: 5px;
+  max-height: 15rem;
+  min-height: 15rem;
 }
 
 .cadastro-ambiente form .upload span {
@@ -184,6 +198,10 @@
     margin: 0 auto 1.5rem auto;
   }
 
+  .cadastro-ambiente form .upload .imagem-preview {
+    max-height: 100%;
+  }
+
   .cadastro-ambiente form {
     padding-left: 0;
     margin-top: 1rem;
@@ -203,7 +221,7 @@
     width: 100%;
   }
 
-  .cadastro-ambiente form .upload img {
+  .cadastro-ambiente form .upload .imagem-placeholder {
     max-width: 100px;
   }
 
