--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -26,7 +26,7 @@
 .logo-navbar {
     width: 100px;
     height: 100px;
-    background-color: white;
+    background-color: #E9ECEF;
     padding: 5px;
 
     img {
