--- a/public/assets/css/ambientes.css
+++ b/public/assets/css/ambientes.css
@@ -87,6 +87,16 @@
     }
 }
 
+.placeholder-sem-itens {
+    max-height: 70%;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+}
+
 .medidor-sustentabilidade {
     margin-bottom: 15px;
     background-color: #D9D9D9;
